allow nightly builds to fail
Signed-off-by: Hunar Roop Kahlon <hunar.roop@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,13 @@
+cache:
+  directories:
+    - target/debug/fingerprint
+    - target/debug/deps
+
 language: rust
+
+matrix:
+  allow_failures:
+    - rust: nightly
 
 notifications:
   email:
