add some shiny badges
Signed-off-by: Hunar Roop Kahlon <hunar.roop@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,9 @@ repository = "https://github.com/kinggoesgaming/nbf"
 homepage = "https://github.com/kinggoesgaming/nbf"
 documentation = "https://docs.rs/nbf/0.1.0/nbf/"
 version = "0.1.0"
+
+[badges.appveyor]
+repository = "kinggoesgaming/nbf"
+
+[badges.travis-ci]
+repository = "kinggoesgaming/nbf"
