--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ rust:
   - nightly
 
 script:
-  - "cargo build --verbose"
-  - "cargo test --verbose"
-  - "cargo doc --no-deps"
+  - cargo build --verbose
+  - cargo test --verbose
+  - cargo doc --no-deps
 
-  sudo: false
+sudo: false
